# overledger-sdks

./: README.md  package-lock.json  package.json
SDKs/c/mainnet/: CMakeLists.txt  README.md
SDKs/c/mainnet/.openapi-generator/: FILES
SDKs/c/mainnet/api/: AddressSearchAPI.c  AddressSearchAPI.h  BlockSearchAPI.c  BlockSearchAPI.h  CreateAQRC20CreditTransactionAPI.h  CreateAQRC20DebitTransactionAPI.c  CreateAQRC721TokenCollectionTransactionAPI.c  CreateAQRC721TokenCollectionTransactionAPI.h  CreateASubscriptionAPI.h  CreateATransactionAPI.c  CreateATransactionAPI.h  CreateSubscriptionAPI.c  CreateTransactionAPI.c  CreateTransactionAPI.h  FungibleTokenControllerAPI.c  FungibleTokenControllerAPI.h  MDAppTransactionQueryAPI.h  ManageMonitoredResourcesAPI.c  ManageQRC20TokenSupplyAPI.h  ManageQRC721TokenSupplyAPI.c  ManageSubscriptionAPI.h  ManageSubscriptionsAPI.h  MonitorAResourceAPI.c  MonitorAResourceAPI.h  RetrieveApprovedAccountAllowanceForAQRC20TokenAPI.c  RetrieveApprovedAccountInformationForAQRC20TokenAPI.c  RetrieveApprovedAccountInformationForAQRC20TokenAPI.h  RetrieveApprovedAccountInformationOfAQRC721TokenAPI.c  RetrieveContractOwnerInformationOfAQRCTokenAPI.h  RetrieveOwnerInformationForAQRC721TokenAPI.c  RetrieveTheCountOfQRC721TokensAPI.c  RetrieveTheCountOfQRC721TokensAPI.h  RetrieveURIInformationForAQRC721TokenAPI.c  RetrieveURIInformationForAQRC721TokenAPI.h  SmartContractSearchAPI.c  SubscribeToQRC20AccountCreditPaymentsAPI.c  SubscribeToQRC20AccountDebitPaymentsAPI.c  SubscribeToQRC20SharedAccountUpdatesAPI.c  SubscribeToQRC20TokenSupplyChangesAPI.c  SubscribeToQRC20TokenSupplyChangesAPI.h  (+9 more)
SDKs/c/mainnet/docs/: AddressSearchAPI.md  BlockSearchAPI.md  CreateAQRC20CreditTransactionAPI.md  CreateAQRC20DebitTransactionAPI.md  CreateAQRC721TokenCollectionTransactionAPI.md  CreateAQRC721TransferTransactionAPI.md  CreateASubscriptionAPI.md  CreateATransactionAPI.md  CreateAndPayFromAQRC20SharedAccountAPI.md  CreateSubscriptionAPI.md  CreateTransactionAPI.md  FungibleTokenControllerAPI.md  MDAppTransactionQueryAPI.md  MDappTransactionQueryAPI.md  ManageMonitoredResourcesAPI.md  ManageQRC20TokenSupplyAPI.md  ManageQRC721TokenSupplyAPI.md  ManageSubscriptionAPI.md  ManageSubscriptionsAPI.md  MonitorAResourceAPI.md  RetrieveAccountBalanceForAQRC20TokenAPI.md  RetrieveApprovedAccountAllowanceForAQRC20TokenAPI.md  RetrieveApprovedAccountInformationForAQRC20TokenAPI.md  RetrieveApprovedAccountInformationOfAQRC721TokenAPI.md  RetrieveContractOwnerInformationOfAQRCTokenAPI.md  RetrieveOwnerInformationForAQRC721TokenAPI.md  RetrieveSupplyInformationForAQRCTokenAPI.md  RetrieveTheCountOfQRC721TokensAPI.md  RetrieveURIInformationForAQRC721TokenAPI.md  SmartContractSearchAPI.md  SubscribeToQRC20AccountCreditPaymentsAPI.md  SubscribeToQRC20AccountDebitPaymentsAPI.md  SubscribeToQRC20SharedAccountUpdatesAPI.md  SubscribeToQRC20TokenSupplyChangesAPI.md  SubscribeToQRC721AssetCollectionUpdatesAPI.md  SubscribeToQRC721AssetTransfersAPI.md  SubscribeToQRC721SupplyChangeUpdatesAPI.md  SupportedFungibleTokensAPI.md  SupportedNonFungibleTokensAPI.md  TokenControllerAPI.md  (+121 more)
SDKs/c/mainnet/model/: add_secondary_account_request_details_schema.c  add_secondary_account_request_details_schema.h  additional_owner.h  additional_owner_remove_secondary_schema.h  address_balance_response.c  address_balance_response.h  address_monitoring_details_schema.c  address_monitoring_request_schema.c  address_monitoring_response_schema.c  address_monitoring_response_schema.h  alias_details.c  alias_details.h  approve_request_details_schema.c  approve_request_details_schema.h  auto_execute_search_address_balance_response_schema.c  auto_execute_search_address_balance_response_schema.h  auto_execute_search_block_response_schema.c  auto_execute_search_block_response_schema.h  auto_execute_search_utxo_response_schema.c  auto_execute_search_utxo_response_schema.h  beneficiary.c  beneficiary.h  beneficiary_mint_schema_qrc20.h  block.h  block_hash.c  block_size.c  burn.h  burn_request_details_schema.c  burn_request_details_schema.h  burn_request_details_schema_qrc721.h  burn_schema.c  burn_schema.h  create_smart_contract_monitoring_schema.c  create_subscription_request_schema.c  create_subscription_response_schema.c  create_webhook_subscription_request_schema.c  create_webhook_subscription_request_schema.h  create_webhook_subscription_response_schema.c  create_webhook_subscription_response_schema.h  credit_request_details_schema.h  (+173 more)
SDKs/c/mainnet/src/: apiClient.c
SDKs/c/mainnet/unit-test/: test_add_secondary_account_request_details_schema.c  test_additional_owner_remove_secondary_schema.c  test_address_balance_response.c  test_address_monitoring_request_schema.c  test_auto_exec_search_address_sequence_response_schema.c  test_auto_execute_search_address_balance_response_schema.c  test_auto_execute_search_block_response_schema.c  test_auto_execute_search_utxo_response_schema.c  test_beneficiary.c  test_beneficiary_mint_schema_qrc20.c  test_block.c  test_burn.c  test_burn_request_details_schema.c  test_burn_request_details_schema_qrc721.c  test_create_smart_contract_monitoring_schema.c  test_create_webhook_subscription_request_schema.c  test_creator.c  test_creator_mint_schema.c  test_credit_request_details_schema.c  test_destination_payment_schema.c  test_destination_transfer_schema.c  test_error.c  test_error_list.c  test_error_response_message.c  test_event_subscription_response_details.c  test_execute_search_block_response.c  test_execute_search_transaction_response.c  test_execute_search_utxo_response.c  test_execute_search_utxo_response_schema.c  test_execute_smart_contract_read_response_schema.c  test_execute_transaction_response.c  test_function.c  test_function_dto.c  test_fungible_token_response_dto.c  test_linked_blocks.c  test_location.c  test_mint.c  test_mint_request_details_schema_qrc20.c  test_mint_request_details_schema_qrc721.c  test_monitor_smart_contract_event_param.c  (+68 more)
SDKs/c/testnet/: CMakeLists.txt  README.md
SDKs/c/testnet/api/: AddressSearchAPI.c  AddressSearchAPI.h  BlockSearchAPI.c  (+37 more)
(+8666 files in other folders)
